<resources>
    <string name="app_name">Mobile</string>

    <string name="defaultMinPrice">0</string>
    <string name="defaultMaxPrice">3000</string>
    <string name="selectedColor">Обраний колір:</string>
    <string name="selectedPrices">Обрані ціни:</string>
    <string name="currentFlowers">Ваші квіти!</string>
    <string name="hintFlowers">Квіти</string>
    <string name="enterFlowers">Введіть назву квітів:</string>
    <string name="pickColor">Оберіть колір</string>
    <string name="selectPricesRange">Оберіть діапазон цін</string>
    <string name="list">Лист</string>
    <string name="title_activity_video">VideoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
