<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ResultFragment">

    <TextView
        android:id="@+id/priceMinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/defaultMinPrice"
        app:layout_constraintBottom_toBottomOf="@+id/currentPriceLabelView"
        app:layout_constraintStart_toEndOf="@+id/currentPriceLabelView"
        app:layout_constraintTop_toBottomOf="@+id/currentColorView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/priceMaxView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/defaultMaxPrice"
        app:layout_constraintBottom_toBottomOf="@+id/currentPriceLabelView"
        app:layout_constraintStart_toEndOf="@+id/priceMinView"
        app:layout_constraintTop_toBottomOf="@+id/currentColorView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/currentColorLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:text="@string/selectedColor"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentFlowersView" />

    <TextView
        android:id="@+id/currentPriceLabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="96dp"
        android:text="@string/selectedPrices"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentColorLabelView" />

    <TextView
        android:id="@+id/currentFlowersView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentFlowers"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <View
        android:id="@+id/currentColorView"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/currentColorLabelView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentFlowersView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>